two factor authentication added and otp creation added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,24 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 spring.output.ansi.enabled=ALWAYS
 
+# Set the logging level for the root logger
+# logging.level.root=INFO
+
+# Set logging levels for specific packages
+# logging.level.com.example=DEBUG
+# logging.level.org.springframework.web=ERROR
+
+# Log file configuration
+# logging.file.name=logs/application.log
+
+# Log pattern for console output
+# logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+# Log pattern for file output
+# logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+# Rolling file appender configuration (optional)
+# logging.logback.rollingpolicy.max-file-size=10MB
+# logging.logback.rollingpolicy.max-history=30
 
 
