payment integration done with stripe and razorpay

--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,18 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 			<version>3.3.3</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.razorpay/razorpay-java -->
+		<dependency>
+			<groupId>com.razorpay</groupId>
+			<artifactId>razorpay-java</artifactId>
+			<version>1.4.7</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.stripe/stripe-java -->
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>26.12.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
