small fixes in the coin api, order table and in user controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 spring.output.ansi.enabled=ALWAYS
 
+stripe.api.key = stripe key
+razorpay.api.key = razorpay api key
+razorpay.api.secret = razorpay api secret
+
 # Set the logging level for the root logger
 # logging.level.root=INFO
 
