--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,11 @@
 			<artifactId>stripe-java</artifactId>
 			<version>26.12.0</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
