secret key added wallet and payment controllers are fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.jpa.show-sql: true
 spring.output.ansi.enabled=ALWAYS
 
 stripe.api.key = stripe key
-razorpay.api.key = razorpay api key
-razorpay.api.secret = razorpay api secret
+razorpay.api.key = rzp_test_BbLwkBVuQvM5Zt
+razorpay.api.secret = KFtSHEnlNO3BddjweGF6UsNl
 
 # Set the logging level for the root logger
 # logging.level.root=INFO
